# pyre-bug

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/bug_pyre/: main.py
